# nvcodec-rs

./: .pre-commit-config.yaml  CHANGES.md  Cargo.toml  README.md  build.rs  canary.py  prek.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  claude.yml  release.yml
issues/: 0002-design-encoder-codec-config.md  0004-support-buffer-format.md  0015-bug-reconfigure-resolution-buffer-mismatch.md  0016-bug-cuctxpushcurrent-expect-panics.md  0017-bug-decode-recreate-failure-unrecoverable.md  0018-bug-drain-error-silently-dropped.md  0019-fmt-unify-cuda-context-management.md  0020-fmt-remove-expect-from-drain.md  0021-bug-map-resource-no-raii-guard.md  0022-test-worker-terminated-error-paths.md  0023-fmt-various-improvements.md
issues/closed/: 0001-build-cuda-stub-header-missing-cudeviceptr.md  0002-design-encoder-codec-config.md  0003-add-encode-options.md  0004-support-buffer-format.md  0005-decoder-surface-format.md  0006-decoder-dynamic-resolution-change.md  0007-encoder-reconfigure-resolution.md  0008-fix-decoder-nv12-only-copy.md  0009-fix-encoder-pitch-calculation.md  0010-fix-lock-bitstream-null-check.md  0011-fix-extern-c-catch-unwind.md  0012-fix-with-context-panic-safety.md  0013-change-async-encoder-with-callback.md  0014-change-async-decode-callback.md  0015-bug-reconfigure-resolution-buffer-mismatch.md  0016-bug-cuctxpushcurrent-expect-panics.md  0017-bug-decode-recreate-failure-unrecoverable.md  0018-bug-drain-error-silently-dropped.md  0020-fmt-remove-expect-from-drain.md  (+4 more)
src/: codec_info.rs  decode.rs  dl.rs  encode.rs  lib.rs
(+1 files in other folders)
